--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "redux-persist": "^6.0.0"
