--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.7",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.7",
