--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.7",
     "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.7",
     "jwt-decode": "^4.0.0",
