--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "globals": "^15.14.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.3",
+    "redux-mock-store": "^1.5.5",
     "tailwindcss": "^3.4.17",
     "vite": "^6.1.1",
     "vitest": "^4.0.16"
