--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
