feat(telemetry): integrate Sentry with GlobalError boundary

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ node_modules
 dist
 dist-ssr
 *.local
+.env
+.env.development
+.env.production
+.env.test
+.env.local
 
 # Editor directories and files
 .vscode/*
