--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@sentry/react": "^10.33.0",
     "@tailwindcss/vite": "^4.0.7",
     "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.7.9",
