--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.5.1",
     "@sentry/react": "^10.33.0",
     "@tailwindcss/vite": "^4.0.7",
     "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
+    "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.7",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -54,5 +59,9 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.1.1",
     "vitest": "^4.0.16"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
