--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -58,7 +59,7 @@
     "redux-mock-store": "^1.5.5",
     "tailwindcss": "^3.4.17",
     "vite": "^6.1.1",
-    "vitest": "^4.0.16"
+    "vitest": "^4.0.17"
   },
   "overrides": {
     "react": "$react",
