--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@sentry/react": "^10.33.0",
     "@tailwindcss/vite": "^4.0.7",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
@@ -26,9 +27,11 @@
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.7",
     "jwt-decode": "^4.0.0",
+    "posthog-js": "^1.335.0",
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.0.0",
+    "react-ga4": "^2.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
