--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
+    "canvas-confetti": "^1.9.4",
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.7",
